updated favicon -- bug squish

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
 
 header {
   width: 100%;
-  margin: 0 auto 25px;
+  margin: 10px auto 25px;
   text-align: center;
   background: white;
 }
